data/derived/sp14/progs/unify/prog4886.ml.out
Characters 190-191:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> 'b * 'c -> 'b * 'a
       but an expression was expected of type 'a -> 'b * 'c -> 'a
       The type variable 'a occurs inside 'b * 'a
